# k8s-capybara-analyzer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.minimal  Dockerfile.simple  Dockerfile.working  Makefile
.github/workflows/: rust.yml
src/: app.rs  error.rs  kubernetes.rs  logs.rs  main.rs
src/ui/: capybara.rs  cluster_analysis.rs  component_details.rs  deployments_list.rs  logs_list.rs  logs_viewer.rs  main_menu.rs  mod.rs  namespace_details.rs  namespace_list.rs  pods_list.rs
