[package]
name = "k8s-capybara-analyzer"
version = "1.0.0"
edition = "2021"
authors = ["Alessandro Middei"]
description = "A TUI-based Kubernetes cluster analyzer with a capybara easter egg"

[[bin]]
name = "k8s-analyzer"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.24"
